# AI_Middle

./: .cursorrules  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_FIXED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
docs/: ADR-001-clean-architecture.md  ADR-002-oauth2-jwt.md  ADR-003-microservices-by-layer.md  ARCHITECTURE.md
services/aggregation-service/: Dockerfile  pyproject.toml
services/aggregation-service/src/: __init__.py
services/aggregation-service/src/infrastructure/: config.py
services/aggregation-service/src/infrastructure/api/: main.py
services/auth-service/: Dockerfile  alembic.ini  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 001_initial_schema.py
services/auth-service/src/: __init__.py
services/auth-service/src/adapters/: __init__.py
services/auth-service/src/adapters/controllers/: __init__.py  auth_controller.py
services/auth-service/src/adapters/dtos/: __init__.py  auth_dtos.py
services/auth-service/src/adapters/repositories/: __init__.py  user_repository.py
services/auth-service/src/application/: __init__.py
services/auth-service/src/application/ports/: __init__.py  password_hasher.py  token_service.py  user_repository.py
services/auth-service/src/application/use_cases/: __init__.py  authenticate_user.py  refresh_token.py  register_user.py
services/auth-service/src/domain/: __init__.py  exceptions.py
services/auth-service/src/domain/entities/: __init__.py  user.py
services/auth-service/src/domain/value_objects/: __init__.py  email.py  password_hash.py  token.py  user_id.py
services/auth-service/src/infrastructure/: __init__.py  config.py
services/auth-service/src/infrastructure/api/: dependencies.py  main.py  routes.py
services/auth-service/src/infrastructure/database/: models.py  session.py
services/auth-service/src/infrastructure/security/: __init__.py  jwt_service.py  password_hasher.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/unit/: test_email_value_object.py
services/gateway-service/: Dockerfile  pyproject.toml
services/gateway-service/src/: __init__.py
services/gateway-service/src/infrastructure/: config.py
services/gateway-service/src/infrastructure/api/: main.py
services/gateway-service/src/infrastructure/middleware/: circuit_breaker.py  rate_limiter.py
shared/common/: __init__.py  exceptions.py  logging.py  metrics.py  pyproject.toml  result.py  tracing.py
shared/common/domain/: __init__.py  base_entity.py  base_value_object.py
